Change Link to navigate in add thread card, fix thread list vertical gap

--- a/src/components/AddThreadCard/add-thread-card.css
+++ b/src/components/AddThreadCard/add-thread-card.css
@@ -1,13 +1,14 @@
 .add-thread-item-wrapper {
-  padding: 1.5rem;
   background-color: var(--grey);
   color: var(--white);
-  height: 150px;
-  width: 200px;
+  height: 198px;
+  width: 248px;
   border-radius: 10px;
   overflow: hidden;
 }
-
+.add-thread-item-wrapper:hover {
+  cursor: pointer;
+}
 .add-thread-item-wrapper a {
   text-decoration: none;
   color: var(--white);
